--- a/templates/wagers/home.html
+++ b/templates/wagers/home.html
@@ -36,7 +36,7 @@
               <div class="empty-advert teaser">
                 <p class='lead'>You don't seem to be running any tournaments. Want to make one?</p>
                 <p class="lead">
-                  Go to the <a href="% url 'add-tournament' %}"> tournament creation page.</a>
+                  Go to the <a href="{% url 'add-tournament' %}"> tournament creation page.</a>
                 </p>
              </div>
             {% endfor %}
@@ -65,7 +65,7 @@
               <div class="empty-advert teaser">
                 <p class='lead'>You don't seem to be in any tournaments. Want to join one?</p>
                 <p class="lead">
-                  Go to the <a href="% url 'open-tournament-list' %}"> tournament listings page.</a>
+                  Go to the <a href="{% url 'open-tournament-list' %}"> tournament listings page.</a>
                 </p>
               </div>
             {% endfor %}
