Updated code to have dates grouped together.

--- a/templates/wagers/home.html
+++ b/templates/wagers/home.html
@@ -8,7 +8,7 @@
         <h1>Create A Tournament</h1>
         <p>Get people betting in three simple steps: Create a tournament, add propositions, and share the tournament with your friends.</p>
         <div class="lead">
-          <a class="btn btn-warning span12" href="{% url 'add-tournament' %}">Create a tournament.</a>
+          <a class="btn btn-primary span12" href="{% url 'add-tournament' %}">Create a tournament.</a>
         </div>
       </div>
       <div class="well teaser span6">
@@ -16,7 +16,7 @@
         <h1>Join A Tournament</h1>
         <p>Start playing without any hassle. Publically listed tournaments can be found by following the link below.</p>
         <div class="lead">
-          <a class="btn btn-warning span12" href="{% url 'open-tournament-list' %}">Check out public tournaments.</a>
+          <a class="btn btn-primary span12" href="{% url 'open-tournament-list' %}">Check out public tournaments.</a>
         </div>
       </div>
     </div>
