--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,5 +4,6 @@
 	{% with legend="Sign In"%}
 	{% include 'registration/snippets/login_form.html' %}
 	{% endwith %}
+  <a href="{% url "socialauth_begin" "google-oauth2" %}">Login with Google</a>
 </div>
 {% endblock %}
